feat: Enhance CORS configuration and remove hardcoded origins in controllers