@@ -1,5 +1,6 @@
 package com.cdc.presupuesto.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
@@ -8,6 +9,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Lambda-specific configuration
@@ -17,6 +19,12 @@ import java.util.Arrays;
 @Profile("lambda")
 public class LambdaConfig {
 
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
+
+    @Value("${cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS,PATCH}")
+    private String allowedMethods;
+
     /**
      * CORS configuration for Lambda environment
      * Lambda requires more permissive CORS settings
@@ -25,11 +33,21 @@ public class LambdaConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Allow all origins in Lambda (API Gateway will handle CORS)
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+        // Use property value with fallback
+        String[] origins = allowedOrigins.split(",");
+        for (int i = 0; i < origins.length; i++) {
+            origins[i] = origins[i].trim();
+        }
         
-        // Allow all methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        if (origins.length == 1 && "*".equals(origins[0])) {
+            // If wildcard, use allowedOriginPatterns for better compatibility
+            configuration.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            configuration.setAllowedOrigins(Arrays.asList(origins));
+        }
+        
+        // Allow methods from properties
+        configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
         
         // Allow all headers
         configuration.setAllowedHeaders(Arrays.asList("*"));
